--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "author": "Simon Katan",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "nodemon": "^3.1.10",
     "sqlite3": "^5.1.2"
   },
   "engines": {
     "npm": ">=8.0.0",
     "node": ">=16.0.0"
   },
-  "devDependencies": {},
   "keywords": []
 }
